# small_compression

./: CMakeLists.txt  bitfile.c  bitfile.h  huffman.c  huffman.h  huffman_array.c  huffman_array.h  main.c
tests/: bitfile_test.cpp  huffman_array_test.cpp
